// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lint-messages should lint file 1`] = `
Array [
  Array [
    "common.downloadRegional",
    6,
  ],
  Array [
    "analysis.stop",
    8,
  ],
  Array [
    "analysis.stop",
    9,
  ],
  Array [
    "project.delete",
    12,
  ],
  Array [
    "project.delete",
    13,
  ],
  Array [
    "common.runRegional",
    14,
  ],
  Array [
    "common.stopRegional",
    14,
  ],
]
`;

exports[`lint-messages should parse named and default imports together correctly: import { analysis, project as proj }, messages from '../utils/messages' 1`] = `
Array [
  "messages",
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`lint-messages should parse named and default imports together correctly: import messages, { analysis, project as proj } from '../utils/messages' 1`] = `
Array [
  "messages",
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`lint-messages should parse named imports correctly: import { analysis, project as proj } from '../utils/messages' 1`] = `
Array [
  undefined,
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`lint-messages should parse named imports correctly: import {analysis, project as proj} from '../utils/messages' 1`] = `
Array [
  undefined,
  Array [
    Array [
      "analysis",
      "analysis",
    ],
    Array [
      "project",
      "proj",
    ],
  ],
]
`;

exports[`lint-messages should parse root import correctly: import msgs from '../utils/messages' 1`] = `
Array [
  "msgs",
  Array [],
]
`;
